// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorGrid snapshots should render ColorGrid 1`] = `
<DocumentFragment>
  <div
    class="ColorGrid"
  >
    <div
      class="ColorGrid__color-grid"
    >
      <div
        class="ColorGrid__picker-grid"
        style="background-color: rgb(0, 0, 0);"
      />
    </div>
    <div
      class="ColorGrid__picker-target-color"
    />
  </div>
</DocumentFragment>
`;

exports[`ColorGrid snapshots should render when is pending 1`] = `
<DocumentFragment>
  <div
    class="ColorGrid"
  >
    <div
      class="ColorGrid__color-grid"
    >
      <div
        class="ColorGrid__picker-grid"
        style="background-color: rgb(0, 0, 0);"
      />
    </div>
    <div
      class="ColorGrid__picker-target-color"
    />
    <div
      class="ColorGrid__loader"
    >
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1cj4ms"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
